--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -11,5 +11,23 @@ users.active=Активный
 users.registered=Зарегистрирован
 
 meals.title=Список еды
+meals.add=Добавить еду
+meals.delete=Удалить еду
+meals.update=Редактировать еду
+meals.calories=Calories
+meals.description=Описание
+meals.filter=Фильтровать
+meals.edit=Редактировать еду
 
+meals.startDate=От даты
+meals.endDate=До даты
+meals.startTime=От времени
+meals.endTime=До времени
+meals.dateTime=Время
+
+
+common.cancel=Отменить
+common.save=Сохранить
+common.delete=Удалить
+common.update=Обновить
 common.select=Выбрать
